--- a/releases/index.html
+++ b/releases/index.html
@@ -97,5 +97,7 @@
 <a href="luarocks-2.2.0beta1-win32.zip">luarocks-2.2.0beta1-win32.zip</a><br/>
 <a href="luarocks-2.2.0.tar.gz">luarocks-2.2.0.tar.gz</a><br/>
 <a href="luarocks-2.2.0-win32.zip">luarocks-2.2.0-win32.zip</a><br/>
+<a href="luarocks-2.2.1.tar.gz">luarocks-2.2.1.tar.gz</a><br/>
+<a href="luarocks-2.2.1-win32.zip">luarocks-2.2.1-win32.zip</a><br/>
 </body>
 </html>
