Add new logo :)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,45 @@
 <html>
+<head>
+<style>
+body {
+   background-color: white;
+   font-family: "DejaVu Sans", "Bitstream Vera Sans", "Verdana", sans;
+}
+h2 {
+   margin: 0px;
+   font-weight: normal;
+   color: #111;
+   margin-top: 25px;
+   margin-bottom: 25px;
+   border-style: solid;
+   border-color: #2c4067;
+   border-width: 0px 0px 1px 0px;
+}
+a {
+   color: #2c4067;
+   text-decoration: none;
+}
+a:visited {
+   color: #2c4067;
+}
+</style>
+</head>
 <body>
-<a href="releases/">releases/</a>
+
+<p align="center"><a href="http://luarocks.org"><img border="0" src="luarocks.png" alt="LuaRocks"></a></p>
+
+<h2>At this page</h2>
+
+<ul>
+<li><a href="releases/"><b>File releases</b></a> - .tar.gz for Unix and .zip for Windows</li>
+</ul>
+
+<h2>Other places</h2>
+
+<ul>
+<li><a href="http://luarocks.org"><b>luarocks.org</b></a> - Main website</li>
+<li><a href="http://github.com/keplerproject/luarocks">GitHub repository</a></li>
+</ul>
+
 </body>
 </html>
