Add links to release 2.2.2

--- a/releases/index.html
+++ b/releases/index.html
@@ -99,5 +99,7 @@
 <a href="luarocks-2.2.0-win32.zip">luarocks-2.2.0-win32.zip</a><br/>
 <a href="luarocks-2.2.1.tar.gz">luarocks-2.2.1.tar.gz</a><br/>
 <a href="luarocks-2.2.1-win32.zip">luarocks-2.2.1-win32.zip</a><br/>
+<a href="luarocks-2.2.2.tar.gz">luarocks-2.2.2.tar.gz</a><br/>
+<a href="luarocks-2.2.2-win32.zip">luarocks-2.2.2-win32.zip</a><br/>
 </body>
 </html>
