--- a/releases/index.html
+++ b/releases/index.html
@@ -1,105 +1,157 @@
+<!doctype html>
 <html>
 <body>
-<a href="luarocks-0.1.tar.gz">luarocks-0.1.tar.gz</a><br/>
-<a href="luarocks-0.2.tar.gz">luarocks-0.2.tar.gz</a><br/>
-<a href="luarocks-0.3.1.tar.gz">luarocks-0.3.1.tar.gz</a><br/>
-<a href="luarocks-0.3.1-win32.zip">luarocks-0.3.1-win32.zip</a><br/>
-<a href="luarocks-0.3.2.tar.gz">luarocks-0.3.2.tar.gz</a><br/>
-<a href="luarocks-0.3.2-win32.zip">luarocks-0.3.2-win32.zip</a><br/>
-<a href="luarocks-0.3.tar.gz">luarocks-0.3.tar.gz</a><br/>
-<a href="luarocks-0.3-win32.zip">luarocks-0.3-win32.zip</a><br/>
-<a href="luarocks-0.4.1.tar.gz">luarocks-0.4.1.tar.gz</a><br/>
-<a href="luarocks-0.4.1-win32.zip">luarocks-0.4.1-win32.zip</a><br/>
-<a href="luarocks-0.4.2.tar.gz">luarocks-0.4.2.tar.gz</a><br/>
-<a href="luarocks-0.4.2-win32.zip">luarocks-0.4.2-win32.zip</a><br/>
-<a href="luarocks-0.4.3.tar.gz">luarocks-0.4.3.tar.gz</a><br/>
-<a href="luarocks-0.4.3-win32.zip">luarocks-0.4.3-win32.zip</a><br/>
-<a href="luarocks-0.4.tar.gz">luarocks-0.4.tar.gz</a><br/>
-<a href="luarocks-0.4-win32.zip">luarocks-0.4-win32.zip</a><br/>
-<a href="luarocks-0.5.1.tar.gz">luarocks-0.5.1.tar.gz</a><br/>
-<a href="luarocks-0.5.1-win32.zip">luarocks-0.5.1-win32.zip</a><br/>
-<a href="luarocks-0.5.2.tar.gz">luarocks-0.5.2.tar.gz</a><br/>
-<a href="luarocks-0.5.2-win32.zip">luarocks-0.5.2-win32.zip</a><br/>
-<a href="luarocks-0.5.tar.gz">luarocks-0.5.tar.gz</a><br/>
-<a href="luarocks-0.5-win32.zip">luarocks-0.5-win32.zip</a><br/>
-<a href="luarocks-0.6.0.2.tar.gz">luarocks-0.6.0.2.tar.gz</a><br/>
-<a href="luarocks-0.6.0.2-win32.zip">luarocks-0.6.0.2-win32.zip</a><br/>
-<a href="luarocks-1.0.1.tar.gz">luarocks-1.0.1.tar.gz</a><br/>
-<a href="luarocks-1.0.1-win32.zip">luarocks-1.0.1-win32.zip</a><br/>
-<a href="luarocks-1.0.tar.gz">luarocks-1.0.tar.gz</a><br/>
-<a href="luarocks-1.0-win32.zip">luarocks-1.0-win32.zip</a><br/>
-<a href="luarocks-2.0.10.tar.gz">luarocks-2.0.10.tar.gz</a><br/>
-<a href="luarocks-2.0.10-win32.zip">luarocks-2.0.10-win32.zip</a><br/>
-<a href="luarocks-2.0.11.tar.gz">luarocks-2.0.11.tar.gz</a><br/>
-<a href="luarocks-2.0.11-win32.zip">luarocks-2.0.11-win32.zip</a><br/>
-<a href="luarocks-2.0.12.tar.gz">luarocks-2.0.12.tar.gz</a><br/>
-<a href="luarocks-2.0.12-win32.zip">luarocks-2.0.12-win32.zip</a><br/>
-<a href="luarocks-2.0.1.tar.gz">luarocks-2.0.1.tar.gz</a><br/>
-<a href="luarocks-2.0.2-lfw.zip">luarocks-2.0.2-lfw.zip</a><br/>
-<a href="luarocks-2.0.2.tar.gz">luarocks-2.0.2.tar.gz</a><br/>
-<a href="luarocks-2.0.2-win32.zip">luarocks-2.0.2-win32.zip</a><br/>
-<a href="luarocks-2.0.3-r2-win32.zip">luarocks-2.0.3-r2-win32.zip</a><br/>
-<a href="luarocks-2.0.3-rc1.tar.gz">luarocks-2.0.3-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.3-rc1-win32.zip">luarocks-2.0.3-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.3-rc2.tar.gz">luarocks-2.0.3-rc2.tar.gz</a><br/>
-<a href="luarocks-2.0.3.tar.gz">luarocks-2.0.3.tar.gz</a><br/>
-<a href="luarocks-2.0.3-win32.zip">luarocks-2.0.3-win32.zip</a><br/>
-<a href="luarocks-2.0.4.1.tar.gz">luarocks-2.0.4.1.tar.gz</a><br/>
-<a href="luarocks-2.0.4.1-win32.zip">luarocks-2.0.4.1-win32.zip</a><br/>
-<a href="luarocks-2.0.4-rc1.tar.gz">luarocks-2.0.4-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.4-rc1-win32.zip">luarocks-2.0.4-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.4-rc2.tar.gz">luarocks-2.0.4-rc2.tar.gz</a><br/>
-<a href="luarocks-2.0.4-rc2-win32.zip">luarocks-2.0.4-rc2-win32.zip</a><br/>
-<a href="luarocks-2.0.4-rc3.tar.gz">luarocks-2.0.4-rc3.tar.gz</a><br/>
-<a href="luarocks-2.0.4-rc3-win32.zip">luarocks-2.0.4-rc3-win32.zip</a><br/>
-<a href="luarocks-2.0.4.tar.gz">luarocks-2.0.4.tar.gz</a><br/>
-<a href="luarocks-2.0.4-win32.zip">luarocks-2.0.4-win32.zip</a><br/>
-<a href="luarocks-2.0.5-rc1.tar.gz">luarocks-2.0.5-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.5-rc1-win32.zip">luarocks-2.0.5-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.5.tar.gz">luarocks-2.0.5.tar.gz</a><br/>
-<a href="luarocks-2.0.5-win32.zip">luarocks-2.0.5-win32.zip</a><br/>
-<a href="luarocks-2.0.6-rc1.tar.gz">luarocks-2.0.6-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.6-rc1-win32.zip">luarocks-2.0.6-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.6.tar.gz">luarocks-2.0.6.tar.gz</a><br/>
-<a href="luarocks-2.0.6-win32.zip">luarocks-2.0.6-win32.zip</a><br/>
-<a href="luarocks-2.0.7.1.tar.gz">luarocks-2.0.7.1.tar.gz</a><br/>
-<a href="luarocks-2.0.7.1-win32.zip">luarocks-2.0.7.1-win32.zip</a><br/>
-<a href="luarocks-2.0.7.tar.gz">luarocks-2.0.7.tar.gz</a><br/>
-<a href="luarocks-2.0.7-win32.zip">luarocks-2.0.7-win32.zip</a><br/>
-<a href="luarocks-2.0.8-rc1.tar.gz">luarocks-2.0.8-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.8-rc1-win32.zip">luarocks-2.0.8-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.8-rc2.tar.gz">luarocks-2.0.8-rc2.tar.gz</a><br/>
-<a href="luarocks-2.0.8-rc2-win32.zip">luarocks-2.0.8-rc2-win32.zip</a><br/>
-<a href="luarocks-2.0.8.tar.gz">luarocks-2.0.8.tar.gz</a><br/>
-<a href="luarocks-2.0.8-win32.zip">luarocks-2.0.8-win32.zip</a><br/>
-<a href="luarocks-2.0.9.1.tar.gz">luarocks-2.0.9.1.tar.gz</a><br/>
-<a href="luarocks-2.0.9.1-win32.zip">luarocks-2.0.9.1-win32.zip</a><br/>
-<a href="luarocks-2.0.9-rc1.tar.gz">luarocks-2.0.9-rc1.tar.gz</a><br/>
-<a href="luarocks-2.0.9-rc1-win32.zip">luarocks-2.0.9-rc1-win32.zip</a><br/>
-<a href="luarocks-2.0.9-rc2.tar.gz">luarocks-2.0.9-rc2.tar.gz</a><br/>
-<a href="luarocks-2.0.9-rc2-win32.zip">luarocks-2.0.9-rc2-win32.zip</a><br/>
-<a href="luarocks-2.0.9.tar.gz">luarocks-2.0.9.tar.gz</a><br/>
-<a href="luarocks-2.0.9-win32.zip">luarocks-2.0.9-win32.zip</a><br/>
-<a href="luarocks-2.0.tar.gz">luarocks-2.0.tar.gz</a><br/>
-<a href="luarocks-2.1.0-rc1.tar.gz">luarocks-2.1.0-rc1.tar.gz</a><br/>
-<a href="luarocks-2.1.0-rc1-win32.zip">luarocks-2.1.0-rc1-win32.zip</a><br/>
-<a href="luarocks-2.1.0-rc2.tar.gz">luarocks-2.1.0-rc2.tar.gz</a><br/>
-<a href="luarocks-2.1.0-rc2-win32.zip">luarocks-2.1.0-rc2-win32.zip</a><br/>
-<a href="luarocks-2.1.0-rc3.tar.gz">luarocks-2.1.0-rc3.tar.gz</a><br/>
-<a href="luarocks-2.1.0-rc3-win32.zip">luarocks-2.1.0-rc3-win32.zip</a><br/>
-<a href="luarocks-2.1.0.tar.gz">luarocks-2.1.0.tar.gz</a><br/>
-<a href="luarocks-2.1.0-win32.zip">luarocks-2.1.0-win32.zip</a><br/>
-<a href="luarocks-2.1.1.tar.gz">luarocks-2.1.1.tar.gz</a><br/>
-<a href="luarocks-2.1.1-win32.zip">luarocks-2.1.1-win32.zip</a><br/>
-<a href="luarocks-2.1.2.tar.gz">luarocks-2.1.2.tar.gz</a><br/>
-<a href="luarocks-2.1.2-win32.zip">luarocks-2.1.2-win32.zip</a><br/>
-<a href="luarocks-2.2.0beta1.tar.gz">luarocks-2.2.0beta1.tar.gz</a><br/>
-<a href="luarocks-2.2.0beta1-win32.zip">luarocks-2.2.0beta1-win32.zip</a><br/>
-<a href="luarocks-2.2.0.tar.gz">luarocks-2.2.0.tar.gz</a><br/>
-<a href="luarocks-2.2.0-win32.zip">luarocks-2.2.0-win32.zip</a><br/>
-<a href="luarocks-2.2.1.tar.gz">luarocks-2.2.1.tar.gz</a><br/>
-<a href="luarocks-2.2.1-win32.zip">luarocks-2.2.1-win32.zip</a><br/>
 <a href="luarocks-2.2.2.tar.gz">luarocks-2.2.2.tar.gz</a><br/>
 <a href="luarocks-2.2.2-win32.zip">luarocks-2.2.2-win32.zip</a><br/>
+
+<a href="luarocks-2.2.1.tar.gz">luarocks-2.2.1.tar.gz</a><br/>
+<a href="luarocks-2.2.1-win32.zip">luarocks-2.2.1-win32.zip</a><br/>
+
+<a href="luarocks-2.2.0.tar.gz">luarocks-2.2.0.tar.gz</a><br/>
+<a href="luarocks-2.2.0-win32.zip">luarocks-2.2.0-win32.zip</a><br/>
+
+<a href="luarocks-2.2.0beta1.tar.gz">luarocks-2.2.0beta1.tar.gz</a><br/>
+<a href="luarocks-2.2.0beta1-win32.zip">luarocks-2.2.0beta1-win32.zip</a><br/>
+
+<a href="luarocks-2.1.2.tar.gz">luarocks-2.1.2.tar.gz</a><br/>
+<a href="luarocks-2.1.2-win32.zip">luarocks-2.1.2-win32.zip</a><br/>
+
+<a href="luarocks-2.1.1.tar.gz">luarocks-2.1.1.tar.gz</a><br/>
+<a href="luarocks-2.1.1-win32.zip">luarocks-2.1.1-win32.zip</a><br/>
+
+<a href="luarocks-2.1.0.tar.gz">luarocks-2.1.0.tar.gz</a><br/>
+<a href="luarocks-2.1.0-win32.zip">luarocks-2.1.0-win32.zip</a><br/>
+
+<a href="luarocks-2.1.0-rc3.tar.gz">luarocks-2.1.0-rc3.tar.gz</a><br/>
+<a href="luarocks-2.1.0-rc3-win32.zip">luarocks-2.1.0-rc3-win32.zip</a><br/>
+
+<a href="luarocks-2.1.0-rc2.tar.gz">luarocks-2.1.0-rc2.tar.gz</a><br/>
+<a href="luarocks-2.1.0-rc2-win32.zip">luarocks-2.1.0-rc2-win32.zip</a><br/>
+
+<a href="luarocks-2.1.0-rc1.tar.gz">luarocks-2.1.0-rc1.tar.gz</a><br/>
+<a href="luarocks-2.1.0-rc1-win32.zip">luarocks-2.1.0-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.tar.gz">luarocks-2.0.tar.gz</a><br/>
+
+<a href="luarocks-2.0.9.tar.gz">luarocks-2.0.9.tar.gz</a><br/>
+<a href="luarocks-2.0.9-win32.zip">luarocks-2.0.9-win32.zip</a><br/>
+
+<a href="luarocks-2.0.9-rc2.tar.gz">luarocks-2.0.9-rc2.tar.gz</a><br/>
+<a href="luarocks-2.0.9-rc2-win32.zip">luarocks-2.0.9-rc2-win32.zip</a><br/>
+
+<a href="luarocks-2.0.9-rc1.tar.gz">luarocks-2.0.9-rc1.tar.gz</a><br/>
+<a href="luarocks-2.0.9-rc1-win32.zip">luarocks-2.0.9-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.9.1.tar.gz">luarocks-2.0.9.1.tar.gz</a><br/>
+<a href="luarocks-2.0.9.1-win32.zip">luarocks-2.0.9.1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.8.tar.gz">luarocks-2.0.8.tar.gz</a><br/>
+<a href="luarocks-2.0.8-win32.zip">luarocks-2.0.8-win32.zip</a><br/>
+
+<a href="luarocks-2.0.8-rc2.tar.gz">luarocks-2.0.8-rc2.tar.gz</a><br/>
+<a href="luarocks-2.0.8-rc2-win32.zip">luarocks-2.0.8-rc2-win32.zip</a><br/>
+
+<a href="luarocks-2.0.8-rc1.tar.gz">luarocks-2.0.8-rc1.tar.gz</a><br/>
+<a href="luarocks-2.0.8-rc1-win32.zip">luarocks-2.0.8-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.7.tar.gz">luarocks-2.0.7.tar.gz</a><br/>
+<a href="luarocks-2.0.7-win32.zip">luarocks-2.0.7-win32.zip</a><br/>
+
+<a href="luarocks-2.0.7.1.tar.gz">luarocks-2.0.7.1.tar.gz</a><br/>
+<a href="luarocks-2.0.7.1-win32.zip">luarocks-2.0.7.1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.6.tar.gz">luarocks-2.0.6.tar.gz</a><br/>
+<a href="luarocks-2.0.6-win32.zip">luarocks-2.0.6-win32.zip</a><br/>
+
+<a href="luarocks-2.0.6-rc1.tar.gz">luarocks-2.0.6-rc1.tar.gz</a><br/>
+<a href="luarocks-2.0.6-rc1-win32.zip">luarocks-2.0.6-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.5.tar.gz">luarocks-2.0.5.tar.gz</a><br/>
+<a href="luarocks-2.0.5-win32.zip">luarocks-2.0.5-win32.zip</a><br/>
+
+<a href="luarocks-2.0.5-rc1.tar.gz">luarocks-2.0.5-rc1.tar.gz</a><br/>
+<a href="luarocks-2.0.5-rc1-win32.zip">luarocks-2.0.5-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.4.tar.gz">luarocks-2.0.4.tar.gz</a><br/>
+<a href="luarocks-2.0.4-win32.zip">luarocks-2.0.4-win32.zip</a><br/>
+
+<a href="luarocks-2.0.4-rc3.tar.gz">luarocks-2.0.4-rc3.tar.gz</a><br/>
+<a href="luarocks-2.0.4-rc3-win32.zip">luarocks-2.0.4-rc3-win32.zip</a><br/>
+
+<a href="luarocks-2.0.4-rc2.tar.gz">luarocks-2.0.4-rc2.tar.gz</a><br/>
+<a href="luarocks-2.0.4-rc2-win32.zip">luarocks-2.0.4-rc2-win32.zip</a><br/>
+
+<a href="luarocks-2.0.4-rc1.tar.gz">luarocks-2.0.4-rc1.tar.gz</a><br/>
+<a href="luarocks-2.0.4-rc1-win32.zip">luarocks-2.0.4-rc1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.4.1.tar.gz">luarocks-2.0.4.1.tar.gz</a><br/>
+<a href="luarocks-2.0.4.1-win32.zip">luarocks-2.0.4.1-win32.zip</a><br/>
+
+<a href="luarocks-2.0.3.tar.gz">luarocks-2.0.3.tar.gz</a><br/>
+<a href="luarocks-2.0.3-win32.zip">luarocks-2.0.3-win32.zip</a><br/>
+
+<a href="luarocks-2.0.3-rc1-win32.zip">luarocks-2.0.3-rc1-win32.zip</a><br/>
+<a href="luarocks-2.0.3-rc2.tar.gz">luarocks-2.0.3-rc2.tar.gz</a><br/>
+
+<a href="luarocks-2.0.3-r2-win32.zip">luarocks-2.0.3-r2-win32.zip</a><br/>
+<a href="luarocks-2.0.3-rc1.tar.gz">luarocks-2.0.3-rc1.tar.gz</a><br/>
+
+<a href="luarocks-2.0.2.tar.gz">luarocks-2.0.2.tar.gz</a><br/>
+<a href="luarocks-2.0.2-win32.zip">luarocks-2.0.2-win32.zip</a><br/>
+
+<a href="luarocks-2.0.1.tar.gz">luarocks-2.0.1.tar.gz</a><br/>
+<a href="luarocks-2.0.2-lfw.zip">luarocks-2.0.2-lfw.zip</a><br/>
+
+<a href="luarocks-2.0.12.tar.gz">luarocks-2.0.12.tar.gz</a><br/>
+<a href="luarocks-2.0.12-win32.zip">luarocks-2.0.12-win32.zip</a><br/>
+
+<a href="luarocks-2.0.11.tar.gz">luarocks-2.0.11.tar.gz</a><br/>
+<a href="luarocks-2.0.11-win32.zip">luarocks-2.0.11-win32.zip</a><br/>
+
+<a href="luarocks-2.0.10.tar.gz">luarocks-2.0.10.tar.gz</a><br/>
+<a href="luarocks-2.0.10-win32.zip">luarocks-2.0.10-win32.zip</a><br/>
+
+<a href="luarocks-1.0.tar.gz">luarocks-1.0.tar.gz</a><br/>
+<a href="luarocks-1.0-win32.zip">luarocks-1.0-win32.zip</a><br/>
+
+<a href="luarocks-1.0.1.tar.gz">luarocks-1.0.1.tar.gz</a><br/>
+<a href="luarocks-1.0.1-win32.zip">luarocks-1.0.1-win32.zip</a><br/>
+
+<a href="luarocks-0.6.0.2.tar.gz">luarocks-0.6.0.2.tar.gz</a><br/>
+<a href="luarocks-0.6.0.2-win32.zip">luarocks-0.6.0.2-win32.zip</a><br/>
+
+<a href="luarocks-0.5.tar.gz">luarocks-0.5.tar.gz</a><br/>
+<a href="luarocks-0.5-win32.zip">luarocks-0.5-win32.zip</a><br/>
+
+<a href="luarocks-0.5.2.tar.gz">luarocks-0.5.2.tar.gz</a><br/>
+<a href="luarocks-0.5.2-win32.zip">luarocks-0.5.2-win32.zip</a><br/>
+
+<a href="luarocks-0.5.1.tar.gz">luarocks-0.5.1.tar.gz</a><br/>
+<a href="luarocks-0.5.1-win32.zip">luarocks-0.5.1-win32.zip</a><br/>
+
+<a href="luarocks-0.4.tar.gz">luarocks-0.4.tar.gz</a><br/>
+<a href="luarocks-0.4-win32.zip">luarocks-0.4-win32.zip</a><br/>
+
+<a href="luarocks-0.4.3.tar.gz">luarocks-0.4.3.tar.gz</a><br/>
+<a href="luarocks-0.4.3-win32.zip">luarocks-0.4.3-win32.zip</a><br/>
+
+<a href="luarocks-0.4.2.tar.gz">luarocks-0.4.2.tar.gz</a><br/>
+<a href="luarocks-0.4.2-win32.zip">luarocks-0.4.2-win32.zip</a><br/>
+
+<a href="luarocks-0.4.1.tar.gz">luarocks-0.4.1.tar.gz</a><br/>
+<a href="luarocks-0.4.1-win32.zip">luarocks-0.4.1-win32.zip</a><br/>
+
+<a href="luarocks-0.3.tar.gz">luarocks-0.3.tar.gz</a><br/>
+<a href="luarocks-0.3-win32.zip">luarocks-0.3-win32.zip</a><br/>
+
+<a href="luarocks-0.3.2.tar.gz">luarocks-0.3.2.tar.gz</a><br/>
+<a href="luarocks-0.3.2-win32.zip">luarocks-0.3.2-win32.zip</a><br/>
+
+<a href="luarocks-0.3.1.tar.gz">luarocks-0.3.1.tar.gz</a><br/>
+<a href="luarocks-0.3.1-win32.zip">luarocks-0.3.1-win32.zip</a><br/>
+
+<a href="luarocks-0.2.tar.gz">luarocks-0.2.tar.gz</a><br/>
+
+<a href="luarocks-0.1.tar.gz">luarocks-0.1.tar.gz</a><br/>
 </body>
 </html>
