--- a/releases/index.html
+++ b/releases/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <body>
+<a href="luarocks-2.2.3-rc1.tar.gz">luarocks-2.2.3-rc1.tar.gz</a><br/>
+<a href="luarocks-2.2.3-rc1-win32.zip">luarocks-2.2.3-rc1-win32.zip</a><br/>
+
 <a href="luarocks-2.2.2.tar.gz">luarocks-2.2.2.tar.gz</a><br/>
 <a href="luarocks-2.2.2-win32.zip">luarocks-2.2.2-win32.zip</a><br/>
 
