--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a:visited {
 </head>
 <body>
 
-<p align="center"><a href="http://luarocks.org"><img border="0" src="luarocks.png" alt="LuaRocks"></a></p>
+<p align="center"><a href="https://luarocks.org"><img border="0" src="luarocks.png" alt="LuaRocks"></a></p>
 
 <h2>At this page</h2>
 
@@ -38,8 +38,8 @@ a:visited {
 <h2>Other places</h2>
 
 <ul>
-<li><a href="http://luarocks.org"><b>luarocks.org</b></a> - Main website</li>
-<li><a href="http://github.com/keplerproject/luarocks">GitHub repository</a></li>
+<li><a href="https://luarocks.org"><b>luarocks.org</b></a> - Main website</li>
+<li><a href="https://github.com/keplerproject/luarocks"><b>github.com/keplerproject/luarocks</b></a> - GitHub repository</li>
 </ul>
 
 </body>
