--- a/releases/index.html
+++ b/releases/index.html
@@ -46,6 +46,9 @@
 <a href="luarocks-2.1.0-rc1.tar.gz">luarocks-2.1.0-rc1.tar.gz</a><br/>
 <a href="luarocks-2.1.0-rc1-win32.zip">luarocks-2.1.0-rc1-win32.zip</a><br/>
 
+<a href="luarocks-2.0.13.tar.gz">luarocks-2.0.13.tar.gz</a><br/>
+<a href="luarocks-2.0.13-win32.zip">luarocks-2.0.13-win32.zip</a><br/>
+
 <a href="luarocks-2.0.12.tar.gz">luarocks-2.0.12.tar.gz</a><br/>
 <a href="luarocks-2.0.12-win32.zip">luarocks-2.0.12-win32.zip</a><br/>
 
