--- a/releases/index.html
+++ b/releases/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <body>
+<a href="luarocks-2.4.0.tar.gz">luarocks-2.4.0.tar.gz</a><br/>
+<a href="luarocks-2.4.0-win32.zip">luarocks-2.4.0-win32.zip</a><br/>
+
 <a href="luarocks-2.3.0.tar.gz">luarocks-2.3.0.tar.gz</a><br/>
 <a href="luarocks-2.3.0-win32.zip">luarocks-2.3.0-win32.zip</a><br/>
 
