Copy style from luarocks.org

--- a/index.html
+++ b/index.html
@@ -1,46 +1,25 @@
 <!doctype html>
 <html>
 <head>
-<style>
-body {
-   background-color: white;
-   font-family: "DejaVu Sans", "Bitstream Vera Sans", "Verdana", sans;
-}
-h2 {
-   margin: 0px;
-   font-weight: normal;
-   color: #111;
-   margin-top: 25px;
-   margin-bottom: 25px;
-   border-style: solid;
-   border-color: #2c4067;
-   border-width: 0px 0px 1px 0px;
-}
-a {
-   color: #2c4067;
-   text-decoration: none;
-}
-a:visited {
-   color: #2c4067;
-}
-</style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700" type="text/css"/>
+<link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-
-<p align="center"><a href="https://luarocks.org"><img border="0" src="luarocks.png" alt="LuaRocks"></a></p>
-
-<h2>At this page</h2>
-
-<ul>
-<li><a href="releases/"><b>File releases</b></a> - .tar.gz for Unix and .zip for Windows</li>
-</ul>
-
-<h2>Other places</h2>
-
-<ul>
-<li><a href="https://luarocks.org"><b>luarocks.org</b></a> - Main website</li>
-<li><a href="https://github.com/keplerproject/luarocks"><b>github.com/keplerproject/luarocks</b></a> - GitHub repository</li>
-</ul>
-
+   <div class="content">
+      <div class="header"><div class="header_inner"><div class="user_panel"><a href="https://github.com/keplerproject/luarocks/wiki/Download">Install</a> &middot; <a href="https://github.com/keplerproject/luarocks/wiki/Documentation">Docs</a> &middot; <a href="https://luarocks.org/login">Log In</a> &middot; <a href="https://luarocks.org/register">Register</a></div><a href="https://luarocks.org/"><img alt="LuaRocks" class="text_logo" src="https://luarocks.org/static/header_luarocks_name.svg"/></a><form method="GET" action="https://luarocks.org/search" class="header_search"><input type="text" placeholder="Search modules or uploaders..." name="q"/></form></div></div>
+      <div class="index_page">
+         <div class="main_column">
+            <h2>At this page</h2>
+               <ul>
+                  <li><a href="releases/"><b>File releases</b></a> - .tar.gz for Unix and .zip for Windows</li>
+               </ul>
+            <h2>Other places</h2>
+               <ul>
+                  <li><a href="https://luarocks.org"><b>luarocks.org</b></a> - Main website</li>
+                  <li><a href="https://github.com/keplerproject/luarocks"><b>github.com/keplerproject/luarocks</b></a> - GitHub repository</li>
+               </ul>
+         </div>
+      </div>
+   </div>
 </body>
 </html>
