--- a/releases/index.html
+++ b/releases/index.html
@@ -1,15 +1,9 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700" type="text/css"/>
+<link rel="stylesheet" href="../style.css" type="text/css"/>
 <style>
-body {
-   background-color: #eff4ff;
-   padding: 20px;
-}
-h1 {
-   font-family: 'Open Sans', sans-serif;
-   font-weight: normal;
-}
 table {
    width: 100%;
 }
@@ -18,22 +12,16 @@ td {
    background-color: white;
    border: 1px solid #c1cce4;
 }
-a {
-   text-decoration: none;
-   color: #008fee;
-}
-a:hover {
-   text-decoration: underline;
-}
-#content {
-   width: 800px;
-   margin: 0 auto;
-}
+
 </style>
 </head>
 <body>
-<div id="content">
-<h1>LuaRocks releases</h1>
+   <div class="content">
+      <div class="header"><div class="header_inner"><div class="user_panel"><a href="https://github.com/keplerproject/luarocks/wiki/Download">Install</a> &middot; <a href="https://github.com/keplerproject/luarocks/wiki/Documentation">Docs</a> &middot; <a href="https://luarocks.org/login">Log In</a> &middot; <a href="https://luarocks.org/register">Register</a></div><a href="https://luarocks.org/"><img alt="LuaRocks" class="text_logo" src="https://luarocks.org/static/header_luarocks_name.svg"/></a><form method="GET" action="https://luarocks.org/search" class="header_search"><input type="text" placeholder="Search modules or uploaders..." name="q"/></form></div></div>
+      <div class="index_page">
+         <div class="main_column">
+
+<h2>LuaRocks releases</h2>
 <table>
 <tr><td><a href="luarocks-2.4.1.tar.gz">luarocks-2.4.1.tar.gz</a></td><td><a href="luarocks-2.4.1.tar.gz.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-2.4.1-win32.zip">luarocks-2.4.1-win32.zip</a></td><td><a href="luarocks-2.4.1-win32.zip.asc">PGP signature</a></td></tr>
@@ -212,6 +200,9 @@ a:hover {
 
 <tr><td><a href="luarocks-0.1.tar.gz">luarocks-0.1.tar.gz</a></td><td><a href="luarocks-0.1.tar.gz.asc">PGP signature</a></td></tr>
 </table>
-</div>
+
+         </div>
+      </div>
+   </div>
 </body>
 </html>
