--- a/gsoc/ideas2017.html
+++ b/gsoc/ideas2017.html
@@ -83,7 +83,7 @@ more, however, that we could add to improve the site experience, such as:
 
 <h4>Mentor</h4>
 <p>
-<a href="http://leafo.net/">Leaf Corcoran</a>
+<a href="http://leafo.net/">Leaf Corcoran</a> - <a href="mailto:leafot@gmail.com">leafot@gmail.com</a>
 </p>
 </div>
 
@@ -122,7 +122,7 @@ on GitHub</li>
 
 <h4>Mentor</h4>
 <p>
-<a href="http://leafo.net/">Leaf Corcoran</a>
+<a href="http://leafo.net/">Leaf Corcoran</a> - <a href="mailto:leafot@gmail.com">leafot@gmail.com</a>
 </p>
 </div>
 
@@ -157,7 +157,7 @@ for an UI-agnostic API.
 
 <h4>Mentor</h4>
 <p>
-<a href="http://thijsschreijer.nl/">Thijs Schreijer</a>
+<a href="http://thijsschreijer.nl/">Thijs Schreijer</a> - <a href="mailto:thijs@thijsschreijer.nl">thijs@thijsschreijer.nl</a>
 </p>
 </div>
 
@@ -186,7 +186,7 @@ refactoring process.
 
 <h4>Mentor</h4>
 <p>
-<a href="http://hisham.hm/">Hisham Muhammad</a>
+<a href="http://hisham.hm/">Hisham Muhammad</a> - <a href="mailto:h@hisham.hm">h@hisham.hm</a>
 </p>
 </div>
 
@@ -213,7 +213,7 @@ repository of binary rocks that can be installed with Pacman, similar to
 
 <h4>Mentor</h4>
 <p>
-<a href="http://catwell.info/">Pierre Chapuis</a>
+<a href="http://catwell.info/">Pierre Chapuis</a> - <a href="mailto:catwell@catwell.info">catwell@catwell.info</a>
 </p>
 </div>
 
@@ -243,7 +243,7 @@ to improve LuaRocks support for cross-compiling.
 
 <h4>Mentor</h4>
 <p>
-<a href="http://daurnimator.com/">Daurnimator</a>
+<a href="http://daurnimator.com/">Daurnimator</a> - <a href="mailto:quae@daurnimator.com">quae@daurnimator.com</a>
 </p>
 </div>
 
