take over `luarocks upgrade` project from Pierre

--- a/gsoc/ideas2018.html
+++ b/gsoc/ideas2018.html
@@ -246,7 +246,7 @@ implement the command.</p>
 
 <h4>Mentor</h4>
 <p>
-<a href="http://catwell.info/">Pierre Chapuis</a> - <a href="mailto:catwell@archlinux.us">catwell@archlinux.us</a>
+<a href="http://hisham.hm/">Hisham Muhammad</a> - <a href="mailto:h@hisham.hm">h@hisham.hm</a>
 </p>
 </div>
 
