--- a/releases/index.html
+++ b/releases/index.html
@@ -24,6 +24,9 @@ td {
 <h2>LuaRocks releases</h2>
 <table>
 
+<tr><td><a href="luarocks-2.4.4.tar.gz">luarocks-2.4.4.tar.gz</a></td><td><a href="luarocks-2.4.4.tar.gz.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-2.4.4-win32.zip">luarocks-2.4.4-win32.zip</a></td><td><a href="luarocks-2.4.4-win32.zip.asc">PGP signature</a></td></tr>
+
 <tr><td><a href="luarocks-2.4.3.tar.gz">luarocks-2.4.3.tar.gz</a></td><td><a href="luarocks-2.4.3.tar.gz.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-2.4.3-win32.zip">luarocks-2.4.3-win32.zip</a></td><td><a href="luarocks-2.4.3-win32.zip.asc">PGP signature</a></td></tr>
 
