--- a/releases/index.html
+++ b/releases/index.html
@@ -24,6 +24,8 @@ td {
 <h2>LuaRocks releases</h2>
 <table>
 
+<tr><td><a href="luarocks-3.0.0beta2.tar.gz">luarocks-3.0.0beta2.tar.gz</a></td><td><a href="luarocks-3.0.0beta2.tar.gz.asc">PGP signature</a></td></tr>
+
 <tr><td><a href="luarocks-3.0.0beta1.tar.gz">luarocks-3.0.0beta1.tar.gz</a></td><td><a href="luarocks-3.0.0beta1.tar.gz.asc">PGP signature</a></td></tr>
 
 <tr><td><a href="luarocks-2.4.4.tar.gz">luarocks-2.4.4.tar.gz</a></td><td><a href="luarocks-2.4.4.tar.gz.asc">PGP signature</a></td></tr>
