--- a/releases/index.html
+++ b/releases/index.html
@@ -24,6 +24,11 @@ td {
 <h2>LuaRocks releases</h2>
 <table>
 
+<tr><td><a href="luarocks-3.0.3.tar.gz">luarocks-3.0.3.tar.gz</a></td><td><a href="luarocks-3.0.3.tar.gz.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.0.3-windows-32.zip">luarocks-3.0.3-windows-32.zip</a> (luarocks.exe stand-alone Windows binary)</td><td><a href="luarocks-3.0.3-windows-32.zip.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.0.3-linux-x86_64.zip">luarocks-3.0.3-linux-x86_64.zip</a> (luarocks stand-alone Linux x86_64 binary)</td><td><a href="luarocks-3.0.3-linux-x86_64.zip.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.0.3-win32.zip">luarocks-3.0.3-win32.zip</a> (legacy Windows package, includes Lua 5.1)</td><td><a href="luarocks-3.0.3-win32.zip.asc">PGP signature</a></td></tr>
+
 <tr><td><a href="luarocks-3.0.2.tar.gz">luarocks-3.0.2.tar.gz</a></td><td><a href="luarocks-3.0.2.tar.gz.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-3.0.2-windows-32.zip">luarocks-3.0.2-windows-32.zip</a> (luarocks.exe stand-alone Windows binary)</td><td><a href="luarocks-3.0.2-windows-32.zip.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-3.0.2-linux-x86_64.zip">luarocks-3.0.2-linux-x86_64.zip</a> (luarocks stand-alone Linux x86_64 binary)</td><td><a href="luarocks-3.0.2-linux-x86_64.zip.asc">PGP signature</a></td></tr>
