--- a/releases/index.html
+++ b/releases/index.html
@@ -26,6 +26,11 @@ td {
 
 <!-- add new release here -->
 
+<tr><td><a href="luarocks-3.1.3.tar.gz">luarocks-3.1.3.tar.gz</a></td><td><a href="luarocks-3.1.3.tar.gz.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.1.3-windows-32.zip">luarocks-3.1.3-windows-32.zip</a> (luarocks.exe stand-alone Windows binary)</td><td><a href="luarocks-3.1.3-windows-32.zip.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.1.3-linux-x86_64.zip">luarocks-3.1.3-linux-x86_64.zip</a> (luarocks stand-alone Linux x86_64 binary)</td><td><a href="luarocks-3.1.3-linux-x86_64.zip.asc">PGP signature</a></td></tr>
+<tr><td><a href="luarocks-3.1.3-win32.zip">luarocks-3.1.3-win32.zip</a> (legacy Windows package, includes Lua 5.1)</td><td><a href="luarocks-3.1.3-win32.zip.asc">PGP signature</a></td></tr>
+
 <tr><td><a href="luarocks-3.1.2.tar.gz">luarocks-3.1.2.tar.gz</a></td><td><a href="luarocks-3.1.2.tar.gz.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-3.1.2-windows-32.zip">luarocks-3.1.2-windows-32.zip</a> (luarocks.exe stand-alone Windows binary)</td><td><a href="luarocks-3.1.2-windows-32.zip.asc">PGP signature</a></td></tr>
 <tr><td><a href="luarocks-3.1.2-linux-x86_64.zip">luarocks-3.1.2-linux-x86_64.zip</a> (luarocks stand-alone Linux x86_64 binary)</td><td><a href="luarocks-3.1.2-linux-x86_64.zip.asc">PGP signature</a></td></tr>
